<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dabomstew</groupId>
    <artifactId>universal-pokemon-randomizer</artifactId>
    <version>1.2-SNAPSHOT</version>

    <name>universal-pokemon-randomizer</name>
    <url>http://pokehacks.dabomstew.com/randomizer</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13</version>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		  <groupId>org.freemarker</groupId>
		  <artifactId>freemarker</artifactId>
		  <version>2.3.30</version>
		</dependency>
		
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-inline</artifactId>
		    <version>3.5.10</version>
		    <scope>test</scope>
		</dependency>
    </dependencies>

    <build>
        <finalName>randomizer</finalName>
        <resources>
            <resource>
                <directory>src/main/java</directory>
            </resource>
        </resources>

        <plugins>
        <!-- Plugins that fail when managed -->
            <plugin>
                <!-- Builds the randomizer jar -->
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                    <goal>single</goal>
                    </goals>
                </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.dabomstew.pkrandom.gui.RandomizerGUI</mainClass>
                        </manifest>
                    </archive>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <finalName>randomizer</finalName>
                <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.7.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
